--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,69 @@
 :root {
   --primary-text-color: #212121;
   --secondary-text-color: #757575;
+  --white-color: #ffffff;
   --accent-color: #2196f3;
-  --hero-text: #ffffff;
+  --background-hero-color: #2f303a;
+  --button-secondary-color: #188ce8;
+  --background-secondary-color: #f5f4fa;
 }
 
 body {
   color: var(--primary-text-color);
   background-color: #fff;
+
+  font-family: Roboto, sans-serif;
+  letter-spacing: 0.03em;
 }
 
+/* Rules */
 .list {
   list-style: none;
 }
 
-/* site nav */
-.site-nav {
+.link {
+  text-decoration: none;
+}
+
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
+
+/* logo */
+
+.logo {
+  color: var(--primary-text-color);
+
+  font-family: "Raleway";
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.2;
+}
+
+.logo-web {
   color: var(--accent-color);
 }
 
+/* site nav */
+.site-nav {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+}
+
+.site-nav .link {
+  color: var(--primary-text-color);
+}
 .site-nav .link:hover,
 .site-nav .link:focus {
   color: var(--accent-color);
@@ -28,8 +73,159 @@ body {
   color: var(--accent-color);
 }
 
+/* contacts */
+.contacts .link {
+  color: var(--secondary-text-color);
+
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+}
+
+.contacts .link:hover,
+.contacts .link:focus {
+  color: var(--accent-color);
+}
+
+/* main */
+/* hero section */
+.hero {
+  background-color: var(--background-hero-color);
+}
+
+.hero-title {
+  color: var(--white-color);
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+}
+
 /* button */
-.button {
-  color: var(--hero-text);
+.hero-button {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  color: var(--white-color);
   background-color: var(--accent-color);
+}
+
+.hero-button:focus,
+.hero-button:hover {
+  cursor: pointer;
+  background-color: var(--button-secondary-color);
+}
+
+/* portfolio button */
+
+.filter-button {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  background-color: var(--background-secondary-color);
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+.filter-button:focus,
+.filter-button:hover {
+  cursor: pointer;
+  background-color: var(--accent-color);
+  color: var(--white-color);
+}
+
+/* features section */
+
+.features-title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+
+.features-description {
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+  color: var(--secondary-text-color);
+}
+
+/* what we are doing */
+
+.about-title {
+  font-size: 36px;
+  line-height: 1.17;
+  font-weight: 700;
+  letter-spacing: 0.03em;
+}
+
+/* our team */
+
+.team {
+  background-color: var(--background-secondary-color);
+}
+
+.team .background {
+  background-color: var(--white-color);
+}
+
+.team-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+}
+
+.team-name {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+
+.team-position {
+  font-size: 16px;
+  line-height: 1.19;
+  color: var(--secondary-text-color);
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+
+/* footer */
+
+.footer {
+  background-color: var(--background-hero-color);
+  color: var(--white-color);
+}
+
+.footer .logo {
+  color: var(--white-color);
+}
+
+.footer .map {
+  color: var(--white-color);
+  font-size: 14px;
+  line-height: 1.7;
+  font-style: normal;
+}
+
+/* portfolio */
+.project-name {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: var(--main-text-color);
+}
+
+.project-description {
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.03em;
+  color: var(--secondary-text-color);
 }
